Resp Grid, IMG, Media Inquiries
Finished out responsive grid, image resizes properly, shows 100 percent of image instead of just 50px in height because height = auto

--- a/index.html
+++ b/index.html
@@ -124,7 +124,254 @@
 		</div>
 	</div>
 	
+	<div class="row">
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+		<div class="col-1-7">
+			<div></div>
+		</div>
+	</div>
 	
+	<div class="row">
+		<div class="col-2-7">
+			<div></div>
+		</div>
+		<div class="col-3-7">
+			<div></div>
+		</div>
+		<div class="col-2-7">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-1-8">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-1-8">
+			<div></div>
+		</div>
+		<div class="col-7-8">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+		<div class="col-1-9">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-4-9">
+			<div></div>
+		</div>
+		<div class="col-5-9">
+			<img class="img-responsive" src="img/bg-books.jpg" alt="">
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+		<div class="col-1-10">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-7-10">
+			<div></div>
+		</div>
+		<div class="col-3-10">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+		<div class="col-1-11">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-3-11">
+			<div></div>
+		</div>
+		<div class="col-3-11">
+			<div></div>
+		</div>
+		<div class="col-5-11">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+		<div class="col-1-12">
+			<div></div>
+		</div>
+	</div>
+	
+	<div class="row">
+		<div class="col-5-12">
+			<div></div>
+		</div>
+		<div class="col-7-12">
+			<div></div>
+		</div>
+	</div>
 	
 </div>
 	
